PATCH one feature by ID (#148)
* first wip

* private recursive to delete all RemoveOp

* use recursive RemoveOp searching in tests

* ensure feature order, import optimize

* WIP error handling

* WIP without retry

* finish PATCH without openapi

* add openapi definition

* add test, allow reponse type adjustment

* adjust logic to accomodate POST later

* adjust regex extracting feature ID from error message, add test

* add and remove tag capability

* add test, fix logic bug of detecting feature not exist

* moving RemoveOp purging to a shared utils class

* address some review comments

* address some review comments

* abstracting error handling

* fix merging error

* improve error logging

* review comments

* review comments

* review comments

* review comments

* review comments

* review comments

* optimized based on review comments

---------
